@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/multipath-tools/Attic/multipath-tools-0.4.8-r1.ebuild,v 1.7 2011/08/06 08:12:30 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/multipath-tools/Attic/multipath-tools-0.4.8-r1.ebuild,v 1.8 2012/12/11 10:07:21 ssuominen Exp $
 
 EAPI=2
 inherit eutils toolchain-funcs
@@ -18,7 +18,7 @@ RDEPEND="|| (
 		>=sys-fs/lvm2-2.02.45
 		>=sys-fs/device-mapper-1.00.19-r1
 	)
-	>=sys-fs/udev-124
+	virtual/udev
 	dev-libs/libaio"
 DEPEND="${RDEPEND}"
 
